--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "silber/bouncer": "v1.0.0-rc.1",
-        "barryvdh/laravel-debugbar": "^2.4"
+        "barryvdh/laravel-debugbar": "^2.4",
+        "dingo/api": "1.0.x@dev",
+        "tymon/jwt-auth": "1.0.0.rc.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
