--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "barryvdh/laravel-debugbar": "^2.4",
         "dingo/api": "1.0.x@dev",
         "tymon/jwt-auth": "1.0.0.rc.2",
-        "laravel-notification-channels/backport": "^1.0"
+        "laravel-notification-channels/backport": "^1.0",
+        "luoyangpeng/action-log": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
