--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "dingo/api": "1.0.x@dev",
         "tymon/jwt-auth": "1.0.0.rc.2",
         "laravel-notification-channels/backport": "^1.0",
-        "luoyangpeng/action-log": "^1.1"
+        "luoyangpeng/action-log": "^1.1",
+        "guzzlehttp/guzzle": "^6.3",
+        "pusher/pusher-php-server": "^3.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -26,7 +28,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Jlylb\\Sms\\": "packages/jlylb/sms/src/"
         }
     },
     "autoload-dev": {
